WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113836
REGRESSION (
r145869
): Right-click on SWF contents displays the context menu at the wrong place
https://bugs.webkit.org/show_bug.cgi?id=113836
Summary
REGRESSION (r145869): Right-click on SWF contents displays the context menu a...
alejandro.quiroz
Reported
2013-04-02 16:50:55 PDT
Right-clicking on Flash contents in the Safari nightly build displays the context menu at the wrong location. I was able to reproduce it on: + Safari/WebKit nightly
r147249
and subsequent updates. I got the sandboxed Safari/Webkit from
http://nightly.webkit.org
. + Mac OS 10.7.5 + Flash Player 11.6.602.180 + Any page with SWF content. I used
http://helpx.adobe.com/flash-player/kb/find-version-flash-player.html
The problem seems to be with the PopUpContextMenu NPAPI when computing the menu origin coordinates. This problem is accentuated if I move Safari window and the SWF contents near the bottom of the screen and I right-click to display the context menu. It appears on the top of the screen. The problem doesn't exist on Safari 6.0.3 (7536.28.10).
Attachments
Patch
(8.30 KB, patch)
2013-04-12 07:27 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Patch
(10.45 KB, patch)
2013-04-12 08:08 PDT
,
Andreas Kling
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-04-05 10:59:55 PDT
<
rdar://problem/13587624
>
Andreas Kling
Comment 2
2013-04-05 11:06:37 PDT
Regression URL for clicky convenience: <
http://trac.webkit.org/changeset/145869
>
Andreas Kling
Comment 3
2013-04-12 07:27:49 PDT
Created
attachment 197848
[details]
Patch
Andreas Kling
Comment 4
2013-04-12 08:08:53 PDT
Created
attachment 197849
[details]
Patch Incorporating some IRC comments from andersca.
Andreas Kling
Comment 5
2013-04-12 08:12:32 PDT
Committed
r148278
: <
http://trac.webkit.org/changeset/148278
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug